# envirozen

./: .gitignore  .python-version  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: API.md  ARCHITECTURE.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION.md  TROUBLESHOOTING.md
envirozen/: prometheus.yml  sensors.json
envirozen/controller/: actions.py  config.py  config.py.example  envirozen.py  envirozen.service  envirozen1.py  prometheus.py  relay.py  requirements.txt  server.py  server.service
envirozen/controller/templates/: server.html
envirozen/sensors/: main.py  sensor_macs.txt  sensor_readings.py
v1/: main.cpp  wifi_secrets.h
